--- a/static/index.html
+++ b/static/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EPS Chatbot</title>
-    <link rel="stylesheet" href="static/style.css">
+    <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <style>
         /* Adicione aqui a paleta de cores claras */
@@ -107,6 +107,6 @@
         </main>
     </div>
     <div id="notification" class="notification"></div>
-    <script src="static/script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
