--- a/static/netlify/index.html
+++ b/static/netlify/index.html
@@ -88,7 +88,7 @@
         <aside class="sidebar">
             <h2>Conversas Antigas</h2>
             <button id="new-conversation-btn" class="btn">Nova Conversa</button>
-            <button id="clear-history-btn" class="btn">Limpar Conversa Atual</button>
+            <button id="clear-current-chat-btn" class="btn">Limpar Conversa Atual</button>
             <button id="delete-history-btn" class="btn">Apagar Histórico</button>
             <button id="toggle-theme-btn" class="btn">Modo Escuro/Claro</button>
             <ul id="conversation-list"></ul>
