--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         <aside class="sidebar">
             <h2>Conversas Antigas</h2>
             <button id="new-conversation-btn" class="btn">Nova Conversa</button>
-            <button id="clear-current-chat-btn" class="btn">Limpar Conversa Atual</button>
+            <button id="clear-history-btn" class="btn">Limpar Conversa Atual</button>
             <button id="delete-history-btn" class="btn">Apagar Histórico</button>
             <button id="toggle-theme-btn" class="btn">Modo Escuro/Claro</button>
             <ul id="conversation-list"></ul>
@@ -100,9 +100,7 @@
             <section id="chat-box" class="chat-box"></section>
             <div class="chat-input">
                 <input type="text" id="user-input" placeholder="Digite sua pergunta aqui..." />
-                <input type="file" id="image-input" accept="image/*" style="display: none;" />
                 <button id="send-btn" class="btn">Enviar</button>
-                <button id="send-image-btn" class="btn">Enviar Imagem</button>
             </div>
         </main>
     </div>
