--- a/index.html
+++ b/index.html
@@ -81,11 +81,6 @@
             font-size: 0.9em;
             border-radius: 10px;
         }
-        .conversation-item {
-            cursor: pointer;
-            padding: 10px;
-            border-bottom: 1px solid #ccc;
-        }
     </style>
 </head>
 <body>
@@ -99,10 +94,15 @@
             <ul id="conversation-list"></ul>
         </aside>
         <main class="chat-container">
+            <header class="chat-header">
+                <h1>EPS - Ensino Profissional Simplificado</h1>
+            </header>
             <section id="chat-box" class="chat-box"></section>
             <div class="chat-input">
                 <input type="text" id="user-input" placeholder="Digite sua pergunta aqui..." />
+                <input type="file" id="image-input" accept="image/*" style="display: none;" />
                 <button id="send-btn" class="btn">Enviar</button>
+                <button id="send-image-btn" class="btn">Enviar Imagem</button>
             </div>
         </main>
     </div>
