--- a/static/index.html
+++ b/static/index.html
@@ -86,11 +86,12 @@
 <body>
     <div class="main-container">
         <aside class="sidebar">
-            <h2>Conversas Antigas</h2>
+            <img src="static/images/logo_pap.jpg" alt="Logo" class="logo">
             <button id="new-conversation-btn" class="btn">Nova Conversa</button>
             <button id="clear-history-btn" class="btn">Limpar Conversa Atual</button>
             <button id="delete-history-btn" class="btn">Apagar Histórico</button>
             <button id="toggle-theme-btn" class="btn">Modo Escuro/Claro</button>
+            <h2>Histórico de Conversas</h2>
             <ul id="conversation-list"></ul>
         </aside>
         <main class="chat-container">
